ingress-files/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
      #spec.ingressClassName: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0aaa5f11aea4321fa,subnet-057b4bcbe8b116506
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
